// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1 shapshot 1 1`] = `
<div
  className="src-shared-components-challenge-listing-___style__ChallengeFiltersExample___3IjeI"
  id="challengeFilterContainer"
>
  <Connect(Container)
    setFilterState={[MockFunction]}
  />
  <div
    className="src-shared-components-challenge-listing-___style__outage-banner___JSVnq"
  >
    <strong>
      Heads up!
    </strong>
     We will be doing testing work on our Community Platform on April 12, 2021 between 7:30-9:30 UTC-4. We will do our best to ensure a smooth experience for our users but please be aware there may be unforeseen issues during that time. Thank you!
  </div>
  <div
    className="src-shared-components-challenge-listing-___style__tc-content-wrapper___1MqlF"
  >
    <div
      className="src-shared-components-challenge-listing-___style__sidebar-container-mobile___3e65d"
    >
      <Connect(SidebarContainer)
        expanding={false}
      />
      <Connect(Container)
        communityName={null}
        hidden={true}
        isAuth={false}
        setFilterState={[MockFunction]}
      />
    </div>
    <Connect(Listing)
      activeBucket="abc"
      auth={Object {}}
      challenges={Array []}
      communityName={null}
      expandTag={null}
      expandedTags={Array []}
      expanding={false}
      filterState={Object {}}
      loadMoreActive={null}
      loadMoreAll={null}
      loadMoreMy={null}
      loadMoreMyPast={null}
      loadMoreOnGoing={null}
      loadMoreOpenForRegistration={null}
      loadMorePast={null}
      loadMoreReviewOpportunities={null}
      loadingPastChallenges={false}
      newChallengeDetails={false}
      openChallengesInNewTabs={false}
      preListingMsg={null}
      prizeMode="money-usd"
      reviewOpportunities={Array []}
      selectBucket={[MockFunction]}
      setFilterState={[MockFunction]}
      setSort={[MockFunction]}
      sorts={Object {}}
    />
  </div>
</div>
`;

exports[`Matches shallow shapshot 2 shapshot 2 1`] = `
<div
  className="src-shared-components-challenge-listing-___style__ChallengeFiltersExample___3IjeI"
  id="challengeFilterContainer"
>
  <Connect(Container)
    setFilterState={[MockFunction]}
  />
  <div
    className="src-shared-components-challenge-listing-___style__outage-banner___JSVnq"
  >
    <strong>
      Heads up!
    </strong>
     We will be doing testing work on our Community Platform on April 12, 2021 between 7:30-9:30 UTC-4. We will do our best to ensure a smooth experience for our users but please be aware there may be unforeseen issues during that time. Thank you!
  </div>
  <div
    className="src-shared-components-challenge-listing-___style__tc-content-wrapper___1MqlF"
  >
    <div
      className="src-shared-components-challenge-listing-___style__sidebar-container-desktop___h0bz6"
    >
      <Connect(SidebarContainer)
        expanding={false}
      />
      <Connect(Container)
        communityName={null}
        hidden={false}
        isAuth={false}
        setFilterState={[MockFunction]}
      />
    </div>
    <Connect(Listing)
      activeBucket="abc"
      auth={Object {}}
      challenges={Array []}
      communityName={null}
      expandTag={null}
      expandedTags={Array []}
      expanding={false}
      filterState={Object {}}
      loadMoreActive={null}
      loadMoreAll={null}
      loadMoreMy={null}
      loadMoreMyPast={null}
      loadMoreOnGoing={null}
      loadMoreOpenForRegistration={null}
      loadMorePast={null}
      loadMoreReviewOpportunities={null}
      loadingPastChallenges={false}
      newChallengeDetails={false}
      openChallengesInNewTabs={false}
      preListingMsg={null}
      prizeMode="money-usd"
      reviewOpportunities={Array []}
      selectBucket={[MockFunction]}
      setFilterState={[MockFunction]}
      setSort={[MockFunction]}
      sorts={Object {}}
    />
  </div>
</div>
`;
